# ComfyUI-Geeky-Kokoro-TTS

./: .gitignore  GeekyKokoroVoiceModNode.py  GeekyWhisperSpeechNode.py  LICENSE  README.md  Readme.txt  __init__.py  audio_feature_extraction.py  audio_utils.py  embedded_install.bat  guided_voice_morph.py  install.py  node.py  pyproject.toml  requirements.txt  voice_profiles_utils.py
.github/workflows/: publish.yml
examples/: ComfyUI_temp_bvapd_00005_.flac  ComfyUI_temp_haymi_00007_.flac  ComfyUI_temp_xpccc_00005_.flac
