[project]
name = "geeky-kokoro-tts"
description = "A powerful and feature-rich custom node collection for ComfyUI that integrates the latest Kokoro TTS (Text-to-Speech) system with advanced voice modification capabilities. Compatible with ComfyUI v3.49+ and Python 3.12+."
version = "2.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.15"
dependencies = [
    "kokoro>=0.9.4", 
    "soundfile>=0.12.1", 
    "numpy>=1.22.0,<2.0.0", 
    "torch>=2.0.0", 
    "tqdm>=4.64.0", 
    "einops>=0.6.0", 
    "librosa>=0.10.0", 
    "scipy>=1.9.0,<2.0.0", 
    "resampy>=0.4.3"
]

[project.urls]
Repository = "https://github.com/GeekyGhost/ComfyUI-Geeky-Kokoro-TTS"
#  Used by Comfy Registry https://comfyregistry.org

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0"
]

[tool.comfy]
PublisherId = "Geeky Ghost"
DisplayName = "ComfyUI-Geeky-Kokoro-TTS"
Icon = "🔊"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
